force-app/main/default/objects/Account/fields/Opt_in_Confirmation_Date__c.field-meta.xml
<CustomField>
    <fullName>Opt_in_Confirmation_Date__c</fullName>
    <label>Opt-in Confirmation Date</label>
    <type>Date</type>
</CustomField>