force-app/main/default/objects/Account/fields/Opt_in_Source__c.field-meta.xml
<CustomField>
    <fullName>Opt_in_Source__c</fullName>
    <label>Opt-in Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Intershop</fullName>
            </value>
            <value>
                <fullName>Sampling Form</fullName>
            </value>
            <value>
                <fullName>External Database</fullName>
            </value>
            <value>
                <fullName>Customer Service</fullName>
            </value>
            <value>
                <fullName>Local Database</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Episerver</fullName>
            </value>
            <value>
                <fullName>Pro-Campaign</fullName>
            </value>
            <value>
                <fullName>Zeta</fullName>
            </value>
            <value>
                <fullName>Blokker POS</fullName>
            </value>
            <value>
                <fullName>DE.NL</fullName>
            </value>
            <value>
                <fullName>Zeta.Mein.Senseo</fullName>
            </value>
            <value>
                <fullName>serviceplan.mein.senseo</fullName>
            </value>
            <value>
                <fullName>MDC.FR</fullName>
            </value>
            <value>
                <fullName>BBDO</fullName>
                <isActive>false</isActive>
                <label>BBDO</label>
            </value>
            <value>
                <fullName>Blokker</fullName>
                <isActive>false</isActive>
                <label>Blokker</label>
            </value>
            <value>
                <fullName>a</fullName>
                <isActive>false</isActive>
                <label>a</label>
            </value>
            <value>
                <fullName>b</fullName>
                <isActive>false</isActive>
                <label>b</label>
            </value>
            <value>
                <fullName>c</fullName>
                <isActive>false</isActive>
                <label>c</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>