force-app/main/default/objects/Account/fields/Opt_in_Status__c.field-meta.xml
<CustomField>
    <fullName>Opt_in_Status__c</fullName>
    <label>Opt-in Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Opt-out</fullName>
            </value>
            <value>
                <fullName>a</fullName>
                <isActive>false</isActive>
                <label>a</label>
            </value>
            <value>
                <fullName>b</fullName>
                <isActive>false</isActive>
                <label>b</label>
            </value>
            <value>
                <fullName>c</fullName>
                <isActive>false</isActive>
                <label>c</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>