force-app/main/default/objects/Account/fields/Opt_in_Status_Changed__c.field-meta.xml
<CustomField>
    <fullName>Opt_in_Status_Changed__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Opt-in Status Changed</label>
    <type>Checkbox</type>
</CustomField>