force-app/main/default/objects/Account/fields/opt_in_status_synced__c.field-meta.xml
<CustomField>
    <fullName>opt_in_status_synced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>opt_in_status_synced</label>
    <type>Checkbox</type>
</CustomField>