force-app/main/default/objects/Account/fields/Opt_out_Reason__c.field-meta.xml
<CustomField>
    <fullName>Opt_out_Reason__c</fullName>
    <label>Opt-out Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Too many emails</fullName>
            </value>
            <value>
                <fullName>Repetitive offers</fullName>
            </value>
            <value>
                <fullName>Emails aren't interesting</fullName>
            </value>
            <value>
                <fullName>I don't buy TASSIMO online</fullName>
            </value>
            <value>
                <fullName>I stopped using my Tassimo machine</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>a</fullName>
                <isActive>false</isActive>
                <label>a</label>
            </value>
            <value>
                <fullName>b</fullName>
                <isActive>false</isActive>
                <label>b</label>
            </value>
            <value>
                <fullName>c</fullName>
                <isActive>false</isActive>
                <label>c</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>