force-app/main/default/objects/Account/fields/Opt_out_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Opt_out_Request_Date__c</fullName>
    <label>Opt-out Request Date</label>
    <type>Date</type>
</CustomField>