force-app/main/default/objects/Account/fields/Opt_out_URL__c.field-meta.xml
<CustomField>
    <fullName>Opt_out_URL__c</fullName>
    <label>Opt-out URL</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>