force-app/main/default/objects/Account/fields/Order_Recency__c.field-meta.xml
<CustomField>
    <fullName>Order_Recency__c</fullName>
    <label>Order Recency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FrequentBuyers</fullName>
            </value>
            <value>
                <fullName>RecentBuyers</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Churn</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>NonBuyersNew</fullName>
            </value>
            <value>
                <fullName>NonBuyers</fullName>
            </value>
            <value>
                <fullName>NonBuyersOld</fullName>
            </value>
            <value>
                <fullName>NonBuyersInactive</fullName>
            </value>
            <value>
                <fullName>NonBuyerNewlyRegistered</fullName>
            </value>
            <value>
                <fullName>Frequent buyers</fullName>
                <isActive>false</isActive>
                <label>Frequent buyers</label>
            </value>
            <value>
                <fullName>In-active</fullName>
                <isActive>false</isActive>
                <label>In-active</label>
            </value>
            <value>
                <fullName>Non Buyers</fullName>
                <isActive>false</isActive>
                <label>Non Buyers</label>
            </value>
            <value>
                <fullName>Recent buyers</fullName>
                <isActive>false</isActive>
                <label>Recent buyers</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>