force-app/main/default/objects/Account/fields/Preference_Drink__c.field-meta.xml
<CustomField>
    <fullName>Preference_Drink__c</fullName>
    <label>Preference_Drink</label>
    <length>255</length>
    <type>Text</type>
</CustomField>