force-app/main/default/objects/Account/fields/Privacy_Policy_Summary__c.field-meta.xml
<CustomField>
    <fullName>Privacy_Policy_Summary__c</fullName>
    <label>Privacy Policy Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>