force-app/main/default/objects/Account/fields/Privacy_Policy_Version__c.field-meta.xml
<CustomField>
    <fullName>Privacy_Policy_Version__c</fullName>
    <label>Privacy Policy Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>