force-app/main/default/objects/Account/fields/Request_to_be_Forgotten__c.field-meta.xml
<CustomField>
    <fullName>Request_to_be_Forgotten__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Request to be Forgotten</label>
    <type>Checkbox</type>
</CustomField>