force-app/main/default/objects/Account/fields/Single_Opt_in__c.field-meta.xml
<CustomField>
    <fullName>Single_Opt_in__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Single Opt-in</label>
    <type>Checkbox</type>
</CustomField>