force-app/main/default/objects/Account/fields/Sixteen_Years_or_Older__c.field-meta.xml
<CustomField>
    <fullName>Sixteen_Years_or_Older__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sixteen Years or Older</label>
    <type>Checkbox</type>
</CustomField>