force-app/main/default/objects/Account/fields/Social_Media_Consent__c.field-meta.xml
<CustomField>
    <fullName>Social_Media_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Social Media Consent</label>
    <type>Checkbox</type>
</CustomField>