force-app/main/default/objects/Account/fields/SOI_Confirmation_Email_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>SOI_Confirmation_Email_Sent_Date__c</fullName>
    <label>SOI Confirmation Email Sent Date</label>
    <type>DateTime</type>
</CustomField>