force-app/main/default/objects/Account/fields/Source_Unique_ID__c.field-meta.xml
<CustomField>
    <fullName>Source_Unique_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description
  >To be used for data migration from Zeta/Pro-Campaign</description>
    <inlineHelpText
  >Unique ID of the record in the System (Pro-Camppaign or Zeta). Prefereably prepended with "Zeta" or "Pro to avoid possibility of duplication"</inlineHelpText>
    <label>Source Unique ID</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>