force-app/main/default/objects/Account/fields/Survey_Consent__c.field-meta.xml
<CustomField>
    <fullName>Survey_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Survey Consent</label>
    <type>Checkbox</type>
</CustomField>