force-app/main/default/objects/Account/fields/Survey_Consent_Text__c.field-meta.xml
<CustomField>
    <fullName>Survey_Consent_Text__c</fullName>
    <label>Survey Consent Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>