force-app/main/default/objects/Account/fields/Tassimo_RO_Import__c.field-meta.xml
<CustomField>
    <fullName>Tassimo_RO_Import__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Checkbox that determines that records came from Tassimo RO Import.</description>
    <label>Tassimo RO Import</label>
    <type>Checkbox</type>
</CustomField>