force-app/main/default/objects/Account/fields/TransactionsAdjustment__c.field-meta.xml
<CustomField>
    <fullName>TransactionsAdjustment__c</fullName>
    <label>TransactionsAdjustment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>