force-app/main/default/objects/Account/fields/Unique_Code__c.field-meta.xml
<CustomField>
    <fullName>Unique_Code__c</fullName>
    <label>Unique Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>