force-app/main/default/objects/Account/fields/VAT_Number_on_Consumer__c.field-meta.xml
<CustomField>
    <fullName>VAT_Number_on_Consumer__c</fullName>
    <label>VAT Number on Consumer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>