force-app/main/default/objects/Account/validationRules/No_Future_Date_on_Opt_In_Confirmation_Da.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Future_Date_on_Opt_In_Confirmation_Da</fullName>
    <active>true</active>
    <errorConditionFormula>Opt_in_Confirmation_Date__c&gt;Today()</errorConditionFormula>
    <errorDisplayField>Opt_in_Confirmation_Date__c</errorDisplayField>
    <errorMessage>Future dates are not allowed.</errorMessage>
</ValidationRule>