force-app/main/default/objects/Account/validationRules/No_Future_Dates_in_Opt_in_Request_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Future_Dates_in_Opt_in_Request_Date</fullName>
    <active>true</active>
    <errorConditionFormula
  >Opt_in_Request_Date__c &gt;Today()</errorConditionFormula>
    <errorDisplayField>Opt_in_Request_Date__c</errorDisplayField>
    <errorMessage>Future dates are not allowed.</errorMessage>
</ValidationRule>