force-app/main/default/objects/Account/validationRules/Postal_Code_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>Postal_Code_Format</fullName>
    <active>true</active>
    <errorConditionFormula>IF(NOT(ISBLANK(BillingPostalCode)) &amp;&amp; ISCHANGED(BillingPostalCode), 
 IF(($Profile.Name = "JDE DTC Support Agent") &amp;&amp; 
   ISPICKVAL(Brand__c , "Douwe Egberts") ,
    IF(REGEX( BillingPostalCode , "[a-zA-Z0-9]{4}.+[a-zA-Z0-9]{2}"), false, 
    true) , 
 false), 
false)</errorConditionFormula>
    <errorMessage>Invalid Postal Code Format. Please follow this format: XXXX XX</errorMessage>
</ValidationRule>