force-app/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Brand__c</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>PC_FIRST_NAME</columns>
    <columns>PC_LAST_NAME</columns>
    <columns>External_Id__c</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>Country__c</columns>
    <columns>IS_PERSON_ACCOUNT</columns>
    <filterScope>Everything</filterScope>
    <label>All Accounts</label>
</ListView>