force-app/main/default/objects/Account/listViews/DE_Locked_accounts.listView-meta.xml
<ListView>
    <fullName>DE_Locked_accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>NumberOfFailedLogins__c</columns>
    <columns>LoginLockDatetime__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LoginLockDatetime__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>DE Locked accounts</label>
    <sharedTo>
        <group>BackOfficeAgents</group>
    </sharedTo>
</ListView>