force-app/main/default/objects/Account/listViews/LO_R_Accounts.listView-meta.xml
<ListView>
    <fullName>LO_R_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Type__c</columns>
    <columns>Opt_in_Status__c</columns>
    <columns>Country__c</columns>
    <columns>Brand__c</columns>
    <columns>PC_EMAIL</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Brand__c</field>
        <operation>equals</operation>
        <value>L'Or</value>
    </filters>
    <label>L'OR Accounts</label>
</ListView>