force-app/main/default/objects/Account/listViews/MyAccounts.listView-meta.xml
<ListView>
    <fullName>MyAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Brand__c</columns>
    <columns>Country__c</columns>
    <columns>Consent_Status__c</columns>
    <columns>Survey_Consent__c</columns>
    <columns>Social_Media_Consent__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>My Accounts</label>
</ListView>